--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="center_vertical"
     android:orientation="vertical">
 
     <LinearLayout
@@ -12,10 +12,11 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:layout_width="131dp"
-            android:layout_height="125dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:adjustViewBounds="true"
+            android:background="#00000000"
             android:maxHeight="100dp"
             android:maxWidth="100dp"
             android:scaleType="fitXY"
@@ -25,6 +26,7 @@
             android:id="@+id/help_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#00000000"
             android:fontFamily="serif"
             android:text="@string/help_button"
             android:textAlignment="viewStart"
@@ -41,10 +43,11 @@
 
 
         <ImageButton
-            android:layout_width="135dp"
-            android:layout_height="125dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:adjustViewBounds="true"
+            android:background="#00000000"
             android:maxHeight="100dp"
             android:maxWidth="100dp"
             android:scaleType="fitXY"
@@ -54,6 +57,7 @@
             android:id="@+id/news_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#00000000"
             android:fontFamily="serif"
             android:text="@string/news_button"
             android:textAlignment="viewStart"
@@ -69,10 +73,11 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:layout_width="135dp"
-            android:layout_height="125dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:adjustViewBounds="true"
+            android:background="#00000000"
             android:maxHeight="100dp"
             android:maxWidth="100dp"
             android:scaleType="fitXY"
@@ -82,6 +87,7 @@
             android:id="@+id/health_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#00000000"
             android:fontFamily="serif"
             android:text="@string/health_button"
             android:textAlignment="viewStart"
